--- a/acydgallery/server/.env.example
+++ b/acydgallery/server/.env.example
@@ -1,11 +1,19 @@
 # Server Configuration
-PORT=5000
+PORT=3001
 
 # Database Configuration
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=your_password_here
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
 DB_NAME=acydgallery
 
 # JWT Secret
-JWT_SECRET=your_secret_key_here 
+JWT_SECRET=your_jwt_secret_key
+JWT_REFRESH_SECRET=your_refresh_secret_key
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:3000
+
+# Domain Configuration
+DOMAIN=yourdomain.com
+NODE_ENV=development # Change to 'production' when going live 
